# 3d_coverage_path_planning

./: .rosinstall  README.md
3d_coverage_path_planning/three_dimensional_coverage_path_planning/: CMakeLists.txt  package.xml
3d_coverage_path_planning/three_dimensional_coverage_path_planning/config/model/: general.yaml
3d_coverage_path_planning/three_dimensional_coverage_path_planning/data/: scene.h5
3d_coverage_path_planning/three_dimensional_coverage_path_planning/src/viewpoint_computation/candidate_generator/: mesh_navigation_candidate_generator.cpp
3d_coverage_path_planning/three_dimensional_coverage_path_planning/src/waypoint_order_computation/: mesh_navigation_path_planner.cpp
grid_map_proc/: CMakeLists.txt  package.xml
hector_model_conversions/mesh_to_sdf/: CMakeLists.txt
hector_waypoint_order/src/tsp_solver/: greedy_and_simulated_annealing_tsp_solver.cpp
mesh_sampling/: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
mesh_sampling/.github/workflows/: build.yml  package.yml
mesh_sampling/CMakeModules/: FindCLI11.cmake  Findmesh_sampling_3rd_party_assimp.cmake
mesh_sampling/debian/: control
mesh_sampling/include/mesh_sampling/: assimp_scene.h  mesh_sampling.h  qhull_io.h  weighted_random_sampling.h
mesh_sampling/src/: CMakeLists.txt  mesh_sampling.cpp  weighted_random_sampling.cpp
mesh_sampling/tests/: CMakeLists.txt  testWeightedRandomSampling.cpp
mesh_sampling/tests/test_mesh_sampling/: CMakeLists.txt
mesh_sampling/tests/test_mesh_sampling/src/: CMakeLists.txt  main.cpp
mesh_sampling/utils/: CMakeLists.txt  mesh_sampling.cpp
voxblox_ground_truth/: CMakeLists.txt
